server_output.log
✅ Email service initialized with Resend
=== GUARDIAN SIMPLE SERVER STARTING ===
Node version: v24.3.0
Environment: development
Port: 3001
Process PID: 25230
Current working directory: /opt/homebrew/var/www/projects/Guardian MVP
📦 Creating Prisma client...
🔑 JWT configured
🔌 Testing database connection...
🔧 Development mode: Static files served by Vite on port 5175
🚀 Starting Express server...
🔧 Development mode: SPA routing handled by Vite dev server
✅ Server running on port 3001
🔧 Development mode: API server only
🌐 Health check: /api/health
🧪 Simple test: /api/simple-test
🎉 Server startup complete!
✅ Database connected successfully
Server error: 87 |       }
88 |     }
89 | 
90 |     try {
91 |       debug('parse json')
92 |       return JSON.parse(body, reviver)
     ^
SyntaxError: JSON Parse error: Invalid escape character !
     expose: true,
 statusCode: 400,
     status: 400,
       body: "{\"email\":\"test-workspace@example.com\",\"password\":\"Password123\\!\"}",
       type: "entity.parse.failed",

      at <parse> ()
      at parse (unknown:1:1)
      at parse (/opt/homebrew/var/www/projects/Guardian MVP/node_modules/express/node_modules/body-parser/lib/types/json.js:92:19)
      at /opt/homebrew/var/www/projects/Guardian MVP/node_modules/express/node_modules/body-parser/lib/read.js:128:18
      at runInAsyncScope (node:async_hooks:140:23)
      at invokeCallback (/opt/homebrew/var/www/projects/Guardian MVP/node_modules/express/node_modules/raw-body/index.js:238:16)
      at done (/opt/homebrew/var/www/projects/Guardian MVP/node_modules/express/node_modules/raw-body/index.js:227:7)
      at onEnd (/opt/homebrew/var/www/projects/Guardian MVP/node_modules/express/node_modules/raw-body/index.js:287:7)
      at emit (node:events:92:22)
      at endReadableNT (internal:streams/readable:862:50)
      at processTicksAndRejections (native:7:39)

